Added excel report generation

--- a/BookStoreApp/Views/Borrowing/Index.cshtml
+++ b/BookStoreApp/Views/Borrowing/Index.cshtml
@@ -10,7 +10,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-default">
+            <div class="panel panel-info">
                 <div class="panel-heading">
                     View all borrowings
                 </div>
@@ -54,7 +54,7 @@
                 <p id="lateFee"></p>
                 <div class="checkbox">
                     <label>
-                        <input id="feeConfirm" type="checkbox" value=""><b>Fee received</b>
+                        <input id="feeConfirm" type="checkbox" value=""><b>Late fee received</b>
                     </label>
                 </div>
                 <br />
