--- a/BookStoreApp/Views/Shared/_Layout.cshtml
+++ b/BookStoreApp/Views/Shared/_Layout.cshtml
@@ -198,17 +198,6 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-user fa-fw"></i> Users<span class="fa arrow "></span></a>
-                            <ul class="nav nav-second-level">
-                                @* <li>
-                                    <a href="index.html" class="active"><i class="fa fa-user-plus fa-fw"></i> Register user</a>
-                                </li> *@
-                                <li>
-                                    <a href="/users" class="active"><i class="fa fa-users fa-fw"></i> View users</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
                             <a href="#"><i class="fa fa-archive fa-fw"></i> Borrowing <span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
@@ -216,6 +205,17 @@
                                 </li>
                                 <li>
                                     <a href="/borrowing" class="active"><i class="fa fa-history fa-fw"></i> View history</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-user fa-fw"></i> Users<span class="fa arrow "></span></a>
+                            <ul class="nav nav-second-level">
+                                @* <li>
+                                    <a href="index.html" class="active"><i class="fa fa-user-plus fa-fw"></i> Register user</a>
+                                </li> *@
+                                <li>
+                                    <a href="/users" class="active"><i class="fa fa-users fa-fw"></i> View users</a>
                                 </li>
                             </ul>
                         </li>
@@ -231,7 +231,7 @@
                             <a href="#"><i class="fa fa-clipboard fa-fw"></i> Reports <span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="index.html" class="active"><i class="fa fa-print fa-fw"></i> Inventory reports</a>
+                                    <a href="/reports" class="active"><i class="fa fa-print fa-fw"></i> Reports</a>
                                 </li>
                             </ul>
                         </li>
