--- a/BookStoreApp/Views/Users/Index.cshtml
+++ b/BookStoreApp/Views/Users/Index.cshtml
@@ -10,7 +10,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-default">
+            <div class="panel panel-info">
                 <div class="panel-heading">
                     View all users
                 </div>
