--- a/BookStoreApp/Views/Books/Index.cshtml
+++ b/BookStoreApp/Views/Books/Index.cshtml
@@ -10,7 +10,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="panel panel-default">
+            <div class="panel panel-info">
                 <div class="panel-heading">
                     View all books
                 </div>
@@ -25,7 +25,7 @@
                                     <th style="width:10%">Genre</th>
                                     <th style="width:10%">ISBN</th>
                                     <th style="width:10%">Copies</th>
-                                    <th style="width:10%">Actions</th>
+                                    <th style="width:10%" data-orderable="false">Actions</th>
                                 </tr>
                             </thead>
                         </table>
