--- a/BookStoreApp/Views/Books/addbooks.cshtml
+++ b/BookStoreApp/Views/Books/addbooks.cshtml
@@ -10,7 +10,7 @@
 
     <div class="row">
         <div class="col-lg-6">
-            <div class="panel panel-default">
+            <div class="panel panel-info">
                 <div class="panel-heading">
                     Enter details of book
                 </div>
