--- a/BookStoreApp/Views/Shared/_Layout.cshtml
+++ b/BookStoreApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,11 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+@{
+    //Get object from session
+    var userEmailId = HttpContextAccessor.HttpContext.Session.GetString("emailId");
+}
+
+@{
     ViewData["Title"] = "Book Store App";
 }
 <!DOCTYPE html>
@@ -47,22 +54,22 @@
 
     <style>
         body{
-            font-family: "Open Sans", sans-serif !important;
+        font-family: "Open Sans", sans-serif !important;
         }
     </style>
 
 
     <script>
         async function dataService(url) {
-            try {
-                const res = await fetch(url);
-                if (!res.ok) {
-                    throw new Error('Network response error');
-                }
-            return res.json();
-            } catch (err) {
-                console.error('Fetch error:', error);
-            }
+        try {
+        const res = await fetch(url);
+        if (!res.ok) {
+        throw new Error('Network response error');
+        }
+        return res.json();
+        } catch (err) {
+        console.error('Fetch error:', error);
+        }
         }
     </script>
 
@@ -76,7 +83,8 @@
     <![endif]-->
 </head>
 <body>
-
+    @* @if (HttpContext.Session["UserId"].ToString() != null){ *@
+    
     <div id="wrapper">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
@@ -95,7 +103,7 @@
             </ul>
 
             <ul class="nav navbar-right navbar-top-links">
-                <li class="dropdown navbar-inverse">
+                @* <li class="dropdown navbar-inverse">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-bell fa-fw"></i> <b class="caret"></b>
                     </a>
@@ -147,25 +155,28 @@
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         </li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> secondtruth <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li>
-                            <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                        </li>
-                    </ul>
-                </li>
+                    </ul>   
+                </li> *@
+                @* @if (signInManager.IsSignedIn(User))
+                { *@
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-user fa-fw"></i> @userEmailId <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            @* <li>
+                                <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                            </li>
+                            <li class="divider"></li> *@
+                            <li>
+                                <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                            </li>
+                        </ul>
+                    </li>
+                //}
             </ul>
             <!-- /.navbar-top-links -->
 
