--- a/BookStoreApp/Views/Login/Index.cshtml
+++ b/BookStoreApp/Views/Login/Index.cshtml
@@ -33,17 +33,32 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Quicksand&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: "Open Sans", sans-serif !important;
+        }
+    </style>
+
 </head>
 <body>
 
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
+                <div style="margin-top:20%; text-align:center;">
+                    <h3><b>Library Management System</b></h3>
+                    <h3>LMS</h3>
+                </div>
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Please Sign In</h3>
+                        <h3 class="panel-title">Enter login credentials</h3>
                     </div>
-                    
+
                     <div class="panel-body">
                         <form asp-controller="Login" asp-action="Login">
                             <fieldset>
@@ -55,6 +70,14 @@
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
                                 <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
+                                <br />
+
+                                @if (ViewData["LoginError"] != null)
+                                {
+                                    <div id="errorMsgDiv" class="alert alert-danger alert-dismissible">
+                                        <p id="errorMsg">@ViewData["LoginError"]</p>
+                                    </div>
+                                }
                             </fieldset>
                         </form>
                     </div>
