--- a/BookStoreApp/Views/Users/Index.cshtml
+++ b/BookStoreApp/Views/Users/Index.cshtml
@@ -23,7 +23,7 @@
                                     <th style="width:20%">Username</th>
                                     <th style="width:20%">Email</th>
                                     <th style="width:10%">Role</th>
-                                    <th style="width:10%">Actions</th>
+                                    <th style="width:10%" data-orderable="false">Actions</th>
                                 </tr>
                             </thead>
                         </table>
