Added validation on book delete Issued books should not be deleted

--- a/BookStoreApp/Views/Books/Index.cshtml
+++ b/BookStoreApp/Views/Books/Index.cshtml
@@ -69,6 +69,7 @@
             },
             error: function (err) {
                 console.log(err);
+                swal.fire("Oops!", err.responseJSON.detail, "error");
             }
         });
     }
