--- a/BookStoreApp/Views/Shared/_Layout.cshtml
+++ b/BookStoreApp/Views/Shared/_Layout.cshtml
@@ -220,13 +220,13 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-user fa-fw"></i> Users<span class="fa arrow "></span></a>
+                            <a href="#"><i class="fa fa-user fa-fw"></i> Members<span class="fa arrow "></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="/users/adduser" class="active"><i class="fa fa-user-plus fa-fw"></i> Add member</a>
                                 </li>
                                 <li>
-                                    <a href="/users" class="active"><i class="fa fa-users fa-fw"></i> View users</a>
+                                    <a href="/users" class="active"><i class="fa fa-users fa-fw"></i> View members</a>
                                 </li>
                             </ul>
                         </li>
