--- a/BookStoreApp/Views/Users/Index.cshtml
+++ b/BookStoreApp/Views/Users/Index.cshtml
@@ -20,7 +20,7 @@
                         <table class="table table-striped table-bordered table-hover" id="dataTableUsers">
                             <thead>
                                 <tr>
-                                    <th style="width:20%">Username</th>
+                                    <th style="width:20%">Member name</th>
                                     <th style="width:20%">Email</th>
                                     <th style="width:10%">Role</th>
                                     <th style="width:10%" data-orderable="false">Actions</th>
@@ -95,7 +95,7 @@
             ],
              "columnDefs": [
                 {
-                    title: 'Username',
+                    title: 'Member name',
                     "targets": 0
                 },
                 {
