--- a/BookStoreApp/Views/Login/Index.cshtml
+++ b/BookStoreApp/Views/Login/Index.cshtml
@@ -78,6 +78,10 @@
                                         <p id="errorMsg">@ViewData["LoginError"]</p>
                                     </div>
                                 }
+
+                                <p class="help-block">Email: admin@lms.com</p>
+                                <p class="help-block">pass: admin</p>
+
                             </fieldset>
                         </form>
                     </div>
