Changed sample file path

--- a/BookStoreApp/Views/Books/ImportBooks.cshtml
+++ b/BookStoreApp/Views/Books/ImportBooks.cshtml
@@ -12,7 +12,7 @@
         <div class="col-lg-4">
             <div class="well well-sm">
                 <h4>Upload excel file</h4>
-                <a href="/books/DownloadSampleExcel"> <i class="fa fa-external-link fa-fw"></i> Download sample file</a>
+                <a href="/files/Sample_Book_Data_set.xlsx"> <i class="fa fa-external-link fa-fw"></i> Download sample file</a>
                 <div class="row">
                     <div class="col-sm-6">
                         <form id="importExcelForm">
