--- a/BookStoreApp/Views/Dashboard/Index.cshtml
+++ b/BookStoreApp/Views/Dashboard/Index.cshtml
@@ -4,10 +4,12 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Dashboard</h1>
-            <h2 class="label label-primary" style="font-size:20px;">Welcome to Library Management System - LMS</h2>
+        <div class="col-lg-12 text-center" style="color: darkblue;"> <br />
+            <h2 style="font-size:20px;"><b>Welcome to </b></h2>
+            <h2 style="font-size:20px;"><b>Library Management System - LMS</b></h2>
         </div>
+        
+        
     </div>
     <br />
     <br />
