--- a/BookStoreApp/Views/Login/Index.cshtml
+++ b/BookStoreApp/Views/Login/Index.cshtml
@@ -50,7 +50,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <div style="margin-top:20%; text-align:center;">
+                <div style="margin-top:20%; text-align:center; color:darkblue;">
                     <h3><b>Library Management System</b></h3>
                     <h3>LMS</h3>
                 </div>
