Update available copies on book return changed placeholder text in search box

--- a/BookStoreApp/Views/Shared/_Layout.cshtml
+++ b/BookStoreApp/Views/Shared/_Layout.cshtml
@@ -183,7 +183,7 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
-                            <input id="bookNameSearch" type="text" class="form-control" placeholder="Search books...">
+                            <input id="bookNameSearch" type="text" class="form-control" placeholder="Search books by name...">
                             <!-- /input-group -->
                         </li>
                         <li>
